syntax = "proto3";

package writeToDB;

message Request {
	string message = 1;
}

service CodesDataBase {
	rpc Write(StudentJob) returns (Request);
}

message StudentJob {
	string fio = 1;
	string group = 2;
	int32 task_number = 3;
	string code_context = 4;
}
